add settings .
